<resources>
    <string name="app_name">LabsCM20172</string>
    <string name="strIngresar">Ingresar</string>
    <string name="strClave">Contraseña</string>
    <string name="title_activity_principal">Principal</string>

    <string name="navigation_drawer_open">Abrir navigation drawer</string>
    <string name="navigation_drawer_close">Cerrar navigation drawer</string>

    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="masculino">Masculino</string>
    <string name="femenino">Femenino</string>
    <string name="genero_Registro">Género</string>
    <string name="FechaNacimiento_Registro">Fecha de Nacimiento</string>
    <string name="Telefono_Registro">Teléfono</string>
    <string name="Direccion_Registro">Dirección</string>
    <string name="Email">Correo Electrónico</string>
    <string name="Constraseña">Constraseña</string>
    <string name="ciudad">Ciudad</string>
    <string name="ConstraseñaR">Repite la contraseña</string>
    <string name="actualizar">Actualizar</string>
    <string name="salir">Salir</string>
    <string name="ingresar">Ingresar</string>
    <string name="registrar">Registrar</string>

    <string name="str_en">English</string>
    <string name="str_es">Spanish</string>
    <string name="str_pt">Portuguese</string>
    <string name="cambiarIdioma">Cambiar Idioma</string>
    <string name="registrame">Registrarme</string>
    <string-array name="languages">
        <item>@string/str_en</item>
        <item>@string/str_es</item>
        <item>@string/str_pt</item>
    </string-array>

    <string name="action_settings">Configuraciones</string>
    <string name="apartamentos">Apartamentos</string>
    <string name="Perfil">Perfil</string>
    <string name="configuraciones">Configuraciones</string>
    <string name="cerrarSesion">Cerrar sesión</string>
    <string name="acercaDe">Acerca de</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="TipoApartamento">Tipo Apartamento</string>
    <string name="ValorApartamento">Valor Apartamento</string>
    <string name="NumeroHabitaciones">Número Habitaciones</string>
    <string name="AreaApartamento">Area</string>
    <string name="DescripcionApartamento">Descripción</string>
    <string name="UbicaciónApartamento">Ubicación</string>
    <string name="TipoInmueble">Tipo Inmueble</string>
    <string name="valorInmueble">Valor Inmueble</string>
    <string name="areaInmueble">Area Inmueble</string>
    <string name="numeroCuartos">Número de cuartos</string>
    <string name="UbicacionInmueble">Ubicación</string>
    <string name="Buscar">Buscar</string>
    <string name="nombreInmueble">Nombre Inmueble</string>
    <string name="nuevoPass">Nueva contraseña</string>
    <string name="confirmPass">Confirmar contraseña</string>
    <string name="NombreUsuario">Nombre de usuario</string>
    <string name="updateInfo">Actualizar</string>
    <string name="nameLabel">Nombres:</string>
    <string name="lastNameLabel">Apellidos:</string>
    <string name="newPassLabel">Nueva contraseña:</string>
    <string name="confirmPassLabel">Confirmar contraseña:</string>
    <string name="phoneLabel">Teléfono:</string>
    <string name="cityLabel">Ciudad:</string>
    <string name="emailLabel">Email:</string>
    <string name="addressLabel">Dirección:</string>
    <string name="fechaHint">Fecha de nacimiento</string>
    <string name="editarPerfil">Editar información</string>
    <string name="notificaciones">Notificaciones</string>
    <string name="sesion">Sesión</string>
    <string name="Mantenersesion">Mantener sesión</string>
    <string name="activarsonidonoti">Activar sonido de notificaciones</string>
    <string name="permitirnoti">Permitir notificaciones</string>
</resources>