<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="co.edu.udea.compumovil.gr02_20172.lab2activities.Vista.Fragment.DetalleApartamento">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_viewbanner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/lblTipo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/TipoApartamento" />

            <TextView
                android:id="@+id/lblValor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ValorApartamento" />

            <TextView
                android:id="@+id/lblNumeroHabitaciones"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/NumeroHabitaciones" />

            <TextView
                android:id="@+id/lblArea"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/AreaApartamento" />

            <TextView
                android:id="@+id/lblDescripcion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/DescripcionApartamento" />

            <Button
                android:id="@+id/btnUbicacion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onClick"
                android:text="@string/UbicaciónApartamento" />

        </LinearLayout>

    </LinearLayout>



</FrameLayout>
