<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="co.edu.udea.compumovil.gr02_20172.lab2activities.Vista.updatePerfil">

    <ScrollView
        android:layout_width="368dp"
        android:layout_height="551dp"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <LinearLayout
                android:id="@+id/layoutImagen_Informacion"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:padding="8dp">

                <ImageView
                    android:id="@+id/editImage"
                    android:layout_width="350px"
                    android:layout_height="250px"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/avatar"/>

            </LinearLayout>


            <LinearLayout
                android:id="@+id/editInfoContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="5dp"
                android:orientation="vertical"
                android:padding="8dp">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/nameLabel"/>

                <EditText
                    android:id="@+id/editName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/edit_text_border"
                    android:inputType="textPersonName"
                    android:padding="15dp"
                    android:text="@string/nombre" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/lastNameLabel"/>
                <EditText
                    android:id="@+id/editLastName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/edit_text_border"
                    android:inputType="textPersonName"
                    android:padding="15dp"
                    android:text="@string/apellido" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/newPassLabel"/>
                <EditText
                    android:id="@+id/editPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/edit_text_border"
                    android:inputType="textPassword"
                    android:padding="15dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/confirmPass"/>
                <EditText
                    android:id="@+id/confirmPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/edit_text_border"
                    android:inputType="textPassword"
                    android:padding="15dp" />

                <LinearLayout
                    android:id="@+id/layoutGenero_Informacion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:orientation="horizontal"
                    android:padding="8dp">

                    <TextView
                        android:id="@+id/lblGenero_Informacion"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:text="@string/genero_Registro" />

                    <RadioGroup
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/editMasc"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:buttonTint="@color/primary"
                            android:onClick="onRadioButtonClicked"
                            android:text="@string/masculino" />

                        <RadioButton
                            android:id="@+id/editFem"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:buttonTint="@color/primary"
                            android:onClick="onRadioButtonClicked"
                            android:text="@string/femenino" />

                    </RadioGroup>

                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/phoneLabel"/>
                <EditText
                    android:id="@+id/editPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/edit_text_border"
                    android:inputType="number"
                    android:padding="15dp"
                    android:text="@string/Telefono_Registro" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/addressLabel"/>
                <EditText
                    android:id="@+id/editAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/edit_text_border"
                    android:inputType="textNoSuggestions"
                    android:padding="15dp"
                    android:text="@string/Direccion_Registro" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/emailLabel"/>
                <EditText
                    android:id="@+id/editEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/edit_text_border"
                    android:inputType="textEmailAddress"
                    android:padding="15dp"
                    android:text="@string/Email" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/cityLabel"/>
                <AutoCompleteTextView
                    android:id="@+id/editCity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/edit_text_border"
                    android:drawablePadding="5dp"
                    android:drawableStart="@drawable/ic_city"
                    android:hint="@string/ciudad"
                    android:inputType="textCapWords|textNoSuggestions"
                    android:padding="15dp"
                    android:textColor="#000000"
                    android:textColorHint="#000000"
                    tools:layout_editor_absoluteX="294dp"
                    tools:layout_editor_absoluteY="497dp" />
            </LinearLayout>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/corner_input"
                android:backgroundTint="@color/primary"
                android:onClick="onClick"
                android:text="@string/updateInfo"
                android:textColor="#ffffff"/>
        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>
