<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- These settings headers are only used on tablets. -->

    <header
        android:fragment="co.edu.udea.compumovil.gr02_20172.lab2activities.Vista.Fragment.SettingsActivity$GeneralPreferenceFragment"
        android:icon="@drawable/ic_sesion"
        android:title="@string/sesion" />

    <header
        android:fragment="co.edu.udea.compumovil.gr02_20172.lab2activities.Vista.Fragment.SettingsActivity$NotificationPreferenceFragment"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/notificaciones"/>

    <header
        android:icon="@drawable/ic_edit"
        android:title="@string/editarPerfil">
        <intent android:targetPackage="co.edu.udea.compumovil.gr02_20172.lab2activities"
            android:targetClass="co.edu.udea.compumovil.gr02_20172.lab2activities.Vista.updatePerfil"/>
    </header>


</preference-headers>
