<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="co.edu.udea.compumovil.gr02_20172.lab2activities.Vista.Fragment.Perfil">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <LinearLayout
                android:id="@+id/layoutImagen_Informacion"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:padding="8dp">

                <ImageView
                    android:id="@+id/imgFoto_Informacion"
                    android:layout_width="350px"
                    android:layout_height="250px"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/avatar" />

            </LinearLayout>


            <LinearLayout
                android:id="@+id/layoutComponentesDos_Informacion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="5dp"
                android:orientation="vertical"
                android:padding="8dp">


                <TextView
                    android:id="@+id/txtNombre_Informacion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:padding="8dp"
                    android:text="@string/nombre" />

                <TextView
                    android:id="@+id/txtApellido_Informacion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:padding="8dp"
                    android:text="@string/apellido" />

                <LinearLayout
                    android:id="@+id/layoutGenero_Informacion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:orientation="horizontal"
                    android:padding="8dp">

                    <TextView
                        android:id="@+id/lblGenero_Informacion"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:text="@string/genero_Registro" />

                    <RadioGroup
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/rbtnSexoMasculino_Informacion"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:buttonTint="@color/primary"
                            android:enabled="false"
                            android:text="@string/masculino" />

                        <RadioButton
                            android:id="@+id/rbtnSexoFemenino_Informacion"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:buttonTint="@color/primary"
                            android:enabled="false"
                            android:text="@string/femenino" />

                    </RadioGroup>

                </LinearLayout>


                <TextView
                    android:id="@+id/lblFechaNacimiento_Informacion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="@string/FechaNacimiento_Registro" />

                <TextView
                    android:id="@+id/txtTelefono_Informacion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:padding="8dp"
                    android:text="@string/Telefono_Registro" />

                <TextView
                    android:id="@+id/txtDireccion_Informacion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textNoSuggestions"
                    android:padding="8dp"
                    android:text="@string/Direccion_Registro" />

                <TextView
                    android:id="@+id/txtEmail_Informacion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:padding="8dp"
                    android:text="@string/Email" />

                <TextView
                    android:id="@+id/txtCiudad_Informacion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textNoSuggestions"
                    android:padding="8dp"
                    android:text="@string/ciudad" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</FrameLayout>
